@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.icij.datashare</groupId>
         <artifactId>datashare</artifactId>
-        <version>14.0.0</version>
+        <version>14.2.3</version>
     </parent>
 
     <artifactId>datashare-app</artifactId>
@@ -144,7 +144,7 @@
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
-            <version>3.19.0</version>
+            <version>3.20.1</version>
         </dependency>
         
         <!--test dependencies-->
@@ -174,14 +174,14 @@
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>2.0.2-beta</version>
+            <artifactId>mockito-core</artifactId>
+            <version>5.10.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.icij.datashare</groupId>
             <artifactId>commons-test</artifactId>
-            <version>14.0.0</version>
+            <version>14.2.3</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -194,7 +194,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire.version}</version>
                 <configuration>
-                    <argLine>-Djava.system.class.loader=org.icij.datashare.DynamicClassLoader -ea</argLine>
+                    <argLine>-Djava.system.class.loader=org.icij.datashare.DynamicClassLoader -ea --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
